[package]
name = "redux-rs"
version = "0.3.3"
description = "A Rust implementation of Redux."
authors = ["Jeroen Vervaeke <jeroen@vervaeke.nu>", "Jan Baudisch <dev@baudisch.xyz>"]
license = "MIT"
homepage = "https://github.com/redux-rs/redux-rs"
repository = "https://github.com/redux-rs/redux-rs.git"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = "0.1.52"
env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4", optional = true }
tokio = { version = "1", default-features = false, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = [ "async_tokio" ]

async_tokio = [ "tokio/rt", "tokio/sync" ]
async_wasm = [ "wasm-bindgen-futures", "tokio/sync" ]
middleware_logger = [ "log" ]
middleware_thunk = []

example_logger_middleware_dependencies = [ "middleware_logger", "env_logger" ]
example_thunk_middleware_dependencies = [ "middleware_thunk" ]

test_async_tokio = ["async_tokio", "tokio/sync", "tokio/rt", "tokio/rt-multi-thread", "tokio/time", "tokio/macros"]


[[example]]
name = "basic_todo"

[[example]]
name = "logger_middleware"
required-features = [ "example_logger_middleware_dependencies" ]

[[example]]
name = "thunk_middleware_fn"
required-features = [ "example_thunk_middleware_dependencies" ]

[[example]]
name = "thunk_middleware_trait"
required-features = [ "example_thunk_middleware_dependencies" ]
